@@ -1,3 +1,3 @@
-EBUILD cds-meta-11.0-r2.ebuild 1573 RMD160 6907cb4b43708ef28bf0be74a0e4cac4d6c53dd9 SHA1 0d366fb4fe4ea0d324e1ee02a2dc9b08a46a6e0b SHA256 88e89304f59ca072b6521fce1402591765ba7f8f53bd27f38188168e931e063f
-MISC ChangeLog 1611 RMD160 52f269e27561c68ecbf0082f40a536565108237e SHA1 28df9bacf6ced4d6955df34a12a235e86e5932cc SHA256 0035b5171c0b739e4a5e9f150329fdc0a77a3bf01870f3dbddb43714a694d42f
+EBUILD cds-meta-11.0-r3.ebuild 1730 RMD160 d9f2587feb5b59b8f289ddcc2ad1179376036ee3 SHA1 8f80d06094fe0e282031aea8070d896566a53017 SHA256 7a06d7ce9d96a03f8b1a17f9b7755143d9f139be26ab4b9a1705fac6ffe56dd9
+MISC ChangeLog 1830 RMD160 5d7f13f9b9691c6066c055c08a1396fb78ca886c SHA1 19835f54afbffb126790d5f9ceac52b0a75243ec SHA256 7ae201772850fb77ad792c1d3065f35d45521f858149638be342eae917c01d4a
 MISC metadata.xml 260 RMD160 6945f0c9b210fe3068c6e5a6f7d5071cf9043369 SHA1 49f5ce48babea34bb39ff3f0d9d7c3adf9665da2 SHA256 74bbb85f1ec54eab72a905a78ffd5ac51bc7c3f64e9731418aa68f773d2bfba8
