@@ -1,2 +1,2 @@
-EBUILD cl-network-meta-11.0-r7.ebuild 1366 RMD160 b8f77ab7c741fed8ee2dd6a9e3486188b554819a SHA1 61574cf67ab78373937743b9ebd0b9dbb5ff2a24 SHA256 1e72cf2282860a7400f8f9f45a04650ae52a0a97f23d742a7d139f64a6ef1e8e
-MISC ChangeLog 1449 RMD160 e1457fbb029e9685e4d39d26234f4f7d25b2e31e SHA1 ebdcdc7d7be1fe0019d4ca5a91db0ad1dcd2295c SHA256 b430a23fa9f9e0b86773434bd64e2f0fa745347159df93bccfd829765ffcd18e
+EBUILD cl-network-meta-11.0-r8.ebuild 1349 RMD160 e9a7860177b5636e5f979fdcb666d36239dce1aa SHA1 d229a33a5f6911c6e27ad23ccd3a7467dbe8377e SHA256 bd5d8d4bd736720c0e9a933c79013f8254712a5753bc10f9c0be1cb016c259fb
+MISC ChangeLog 1696 RMD160 ad87c7d70843ddef72401c5aac4db307c3ee75de SHA1 698b75746e3b7b1c8d3207971b54e1479716449e SHA256 28f3f60a8d46a928e19f378e49e9b308a1331214635c64bf4792495f478d2647
