@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-network-meta-11.0-r8 (01 Mar 2011)
+
+  01 Mar 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cl-network-meta-11.0-r7.ebuild, +cl-network-meta-11.0-r8.ebuild:
+  Add net-ftp/tftp-hpa for CDS, removed net-p2p/bittorrent, net-p2p/btpd
+
 *cl-network-meta-11.0-r7 (27 Feb 2011)
 
   27 Feb 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
