@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cds-meta-11.0-r3 (01 Mar 2011)
+
+  01 Mar 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cds-meta-11.0-r2.ebuild, +cds-meta-11.0-r3.ebuild:
+  Added calculate_noasterisk and calculate_nobittorrent USE flags
+
 *cds-meta-11.0-r2 (21 Feb 2011)
 
   21 Feb 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
